# algorithms

./: .gitignore  CMakeLists.txt  common.h  main.cpp  sudoku03.in  sudoku04.in  sudoku06.in
ioi/: CMakeLists.txt
ioi/1994/: CMakeLists.txt  ioi94-triangle.cpp
ioi/2001/: CMakeLists.txt  mobiles.cpp  mobiles1d.cpp
